# bud-runtime

./: .commitlintrc.js  .dockerignore  .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  CLAUDE.md  Dockerfile  PERFORMANCE_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  README-PRECOMMIT.md  README.md  deny.toml  example.env  flake.nix  manual_test_inferences.md  package-lock.json  package.json  pm2.config.js  requirements.txt  sample.secrets.json  secrets.yaml  setup.py  tailwind.config.ts  test_inference_feature.py  tsconfig.json
alembic/: env.py
services/budobserve/budobserve/: README.md  pyproject.toml
services/budobserve/budobserve/budobserve/: __init__.py  propagate.py  testing.py  types.py
services/budobserve/budobserve/budobserve/_internal/: __init__.py  config.py  constants.py  logger.py  main.py  meter.py  span.py  tracer.py  version.py
services/budobserve/budobserve/tests/: __init__.py  test_import.py  test_phase1.py
services/budpipeline/: .env.sample  CLAUDE.md  README.md  SPEC.md  alembic.ini  pyproject.toml
services/budpipeline/budpipeline/: __about__.py  __init__.py  main.py
services/budpipeline/budpipeline/.claude/: ralph-loop.local.md
services/budpipeline/budpipeline/actions/: __init__.py  routes.py  schemas.py
services/budpipeline/budpipeline/actions/base/: __init__.py  context.py  executor.py  meta.py  registry.py  result.py
services/budpipeline/budpipeline/alembic/: env.py
services/budpipeline/budpipeline/commons/: __init__.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  observability.py  rate_limiting.py  resilience.py  sanitization.py
services/budpipeline/budpipeline/core/: __init__.py
services/budpipeline/budpipeline/engine/: __init__.py  condition_evaluator.py  dag_parser.py  dependency_resolver.py  param_resolver.py  schemas.py
services/budpipeline/budpipeline/execution/: __init__.py
services/budpipeline/budpipeline/handlers/: __init__.py  base.py  builtin.py  cluster_handlers.py  completion_tracker.py  event_router.py  model_handlers.py  notification_handlers.py  registry.py
services/budpipeline/budpipeline/monitor/: __init__.py
services/budpipeline/budpipeline/pipeline/: __init__.py  crud.py  execution_routes.py  models.py  persistence_service.py  retention.py  routes.py  schemas.py  service.py
services/budpipeline/budpipeline/progress/: __init__.py  crud.py  models.py  publisher.py  routes.py  schemas.py  service.py
services/budpipeline/budpipeline/scheduler/: __init__.py  cron_parser.py  polling.py  retention_config.py  routes.py  schemas.py  services.py  storage.py  timeout_scheduler.py
services/budpipeline/budpipeline/shared/: __init__.py  dapr_state.py
services/budpipeline/budpipeline/subscriptions/: __init__.py  crud.py  models.py  schemas.py  service.py
services/budpipeline/budpipeline/webhook/: __init__.py  event_handler.py
services/budpipeline/deploy/: Dockerfile  docker-compose.yml
services/budpipeline/docs/: ACTIONS.md  ACTION_MIGRATION.md  API.md  CREATING_ACTIONS.md  DAG_STRUCTURE.md  EVENT_FLOW.md  SERVICE_COMMUNICATION.md
services/budpipeline/docs/templates/: action_template.py
services/budpipeline/examples/: cluster_health_check.json  control_flow_dag.json  ml_deployment_dag.json  sample_dag.json
services/budpipeline/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_ephemeral_execution.py  test_event_publishing.py  test_helm_deploy_action.py  test_historical_queries.py  test_multi_client.py  test_pipeline_crud.py  test_progress_aggregation.py  test_retention.py  test_subscriptions.py  test_user_isolation.py
services/budpipeline/tests/actions/: __init__.py  test_api.py  test_meta.py  test_registry.py
services/budpipeline/tests/e2e/: test_workflow_e2e.py
services/budpipeline/tests/scheduler/: test_timeout_scheduler.py
services/budpipeline/tests/test_engine/: test_condition_evaluator.py  test_dag_parser.py  test_dependency_resolver.py  test_param_resolver.py
services/budpipeline/tests/test_handlers/: test_cluster_handlers.py  test_notification_handlers.py  test_registry.py
services/budpipeline/tests/test_integration/: __init__.py
services/budpipeline/tests/test_scheduler/: test_cron_parser.py
services/budusecases/: .env.sample  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt
services/budusecases/alembic/: env.py
services/budusecases/alembic/versions/: 2026_02_05_initial_schema.py  2026_02_05_remove_component_registry.py  2026_02_06_add_chart_column_to_template_components.py  2026_02_06_add_custom_template_fields.py  2026_02_06_add_pipeline_execution_id.py  2026_02_09_add_project_id_to_deployments.py  2026_02_10_add_access_column_to_templates.py  2026_02_10_add_access_to_deployments.py  2026_03_09_add_model_capability.py
services/budusecases/budusecases/: __about__.py  __init__.py  main.py
services/budusecases/budusecases/clients/: __init__.py
services/budusecases/budusecases/commons/: __init__.py  config.py  dependencies.py
services/budusecases/budusecases/deployments/: __init__.py  crud.py  dag_builder.py  enums.py  exceptions.py  models.py  routes.py  schemas.py  services.py
services/budusecases/budusecases/events/: __init__.py  pipeline_listener.py
services/budusecases/budusecases/templates/: __init__.py  crud.py  enums.py  loader.py  models.py  routes.py  schemas.py  services.py  startup.py  sync.py
services/budusecases/deploy/: Dockerfile  Dockerfile.dev  docker-compose-dev.yaml  docker-compose-psql.yaml  docker-compose-redis.yaml  start_dev.sh
services/budusecases/templates/: .gitkeep  ragflow.yaml
services/budusecases/tests/: __init__.py  conftest.py  test_budcluster_client.py  test_custom_templates.py  test_dag_builder.py  test_deployment_models.py  test_deployment_orchestration.py  test_deployment_progress.py  test_deployment_routes.py  test_helm_schema.py  test_helm_security.py  test_integration_failure_stop.py  test_integration_mixed_deployment.py  test_integration_model_pipeline.py  test_main.py  test_pipeline_listener.py  test_template_loader.py
(+4081 files in other folders)
