[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budpipeline"
version = "0.1.0"
description = "Pipeline orchestration service for bud-stack platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Bud Ecosystem", email = "dev@budecosystem.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "dapr>=1.14.0",
    "dapr-ext-workflow>=1.14.0",
    "dapr-ext-fastapi>=1.14.0",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "croniter>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.8.0",
    "structlog>=24.1.0",
    # Bud microframe for consistent config patterns
    "budmicroframe @ git+https://github.com/BudEcosystem/bud-microframe.git",
    # Database persistence (002-pipeline-event-persistence)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Resilience & observability (002-pipeline-event-persistence)
    "tenacity>=8.2.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "asgi-correlation-id>=4.3.0",
    "pybreaker>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.98.0",
    "respx>=0.20.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]

[project.entry-points."budpipeline.actions"]
# Built-in Control Flow Actions
log = "budpipeline.actions.builtin.log:LogAction"
wait_until = "budpipeline.actions.builtin.wait_until:WaitUntilAction"
conditional = "budpipeline.actions.builtin.conditional:ConditionalAction"
transform = "budpipeline.actions.builtin.transform:TransformAction"
aggregate = "budpipeline.actions.builtin.aggregate:AggregateAction"
set_output = "budpipeline.actions.builtin.set_output:SetOutputAction"
fail = "budpipeline.actions.builtin.fail:FailAction"

# Model Actions
model_add = "budpipeline.actions.model.add:ModelAddAction"
cloud_model_add = "budpipeline.actions.model.add_cloud:CloudModelAddAction"
model_delete = "budpipeline.actions.model.delete:ModelDeleteAction"
model_benchmark = "budpipeline.actions.model.benchmark:ModelBenchmarkAction"

# Cluster Actions
cluster_health = "budpipeline.actions.cluster.health:ClusterHealthAction"

# Deployment Actions
deployment_create = "budpipeline.actions.deployment.create:DeploymentCreateAction"
deployment_delete = "budpipeline.actions.deployment.delete:DeploymentDeleteAction"
deployment_scale = "budpipeline.actions.deployment.scale:DeploymentScaleAction"
deployment_ratelimit = "budpipeline.actions.deployment.ratelimit:DeploymentRateLimitAction"

# Integration Actions
http_request = "budpipeline.actions.integration.http_request:HttpRequestAction"
notification = "budpipeline.actions.integration.notification:NotificationAction"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["budpipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring Dapr",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["budpipeline"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 50

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    "docs/templates/",  # Jinja2 template files, not valid Python
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in interfaces/callbacks)
    "ARG002", # unused method argument (common in base class stubs)
    "SIM102", # use single if statement (sometimes less readable)
    "B007",   # loop control variable not used (often intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["budpipeline"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Too strict for libraries returning Any
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped definitions for now
disallow_incomplete_defs = false  # Allow incomplete definitions
check_untyped_defs = true
ignore_missing_imports = true
# Disable strict optional checking for SQLAlchemy queries that return Any
strict_optional = true
# Allow implicit re-exports
implicit_reexport = true

# Per-module configurations for files with complex SQLAlchemy patterns
[[tool.mypy.overrides]]
module = [
    "budpipeline.pipeline.service",
    "budpipeline.pipeline.persistence_service",
    "budpipeline.pipeline.crud",
    "budpipeline.pipeline.retention",
    "budpipeline.progress.crud",
    "budpipeline.progress.publisher",
    "budpipeline.progress.service",
    "budpipeline.subscriptions.crud",
    "budpipeline.subscriptions.service",
    "budpipeline.scheduler.services",
    "budpipeline.scheduler.timeout_scheduler",
    "budpipeline.handlers.event_router",
    "budpipeline.actions.base.context",
    "budpipeline.actions.base.registry",
    "budpipeline.actions.model.benchmark",
    "budpipeline.actions.cluster.health",
    "budpipeline.engine.param_resolver",
    "budpipeline.engine.dag_parser",
    "budpipeline.commons.observability",
    "budpipeline.commons.resilience",
    "budpipeline.commons.database",
    "budpipeline.alembic.env",
    "budpipeline.scheduler.cron_parser",
]
# Disable error codes for modules with complex type patterns
disable_error_code = ["attr-defined", "arg-type", "return-value", "misc", "operator", "union-attr", "list-item", "valid-type", "index", "no-redef", "var-annotated", "call-arg", "import-untyped", "assignment"]
