[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budusecases"
dynamic = ["version"]
description = "BudServe Use Cases - Pre-configured GenAI deployment templates and orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["genai", "llm", "deployment", "templates", "use-cases"]
authors = [{ name = "Bud Ecosystem Inc.", email = "support@bud.studio" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Framework :: FastAPI",
]
dependencies = [
  "budmicroframe @ git+https://github.com/BudEcosystem/bud-microframe.git",
  "dapr>=1.13.0",
  "dapr-ext-fastapi>=1.13.0",
  "dapr-ext-workflow>=0.5.0",
  "fastapi>=0.111.0",
  "SQLAlchemy>=2.0.27",
  "alembic>=1.13.1",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.6.1",
  "pydantic-settings>=2.1.0",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.6.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.4",
  "pytest-mock>=3.12.0",
  "pytest-timeout>=2.2.0",
  "ruff>=0.2.1",
  "mypy>=1.8.0",
  "types-PyYAML>=6.0.12",
]

[project.urls]
Documentation = "https://github.com/BudEcosystem/bud-tools#readme"
Issues = "https://github.com/BudEcosystem/bud-tools/issues"
Source = "https://github.com/BudEcosystem/bud-tools"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "budusecases/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["budusecases"]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # Pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
  "W191",   # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["budusecases"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "budusecases.deployments.*",
    "budusecases.templates.*",
    "budusecases.events.*",
    "budusecases.clients.*",
    "budusecases.commons.*",
    "budusecases.main",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
